# cs

./: Cargo.toml  README.md  cliff.toml  demo.tape  generateDemo.sh  install.sh  setup-hooks.sh
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs  os.rs  selector.rs  snippet.rs  storage.rs
src/commands/: add.rs  delete.rs  import.rs  list.rs  mod.rs  search.rs
src/utils/: format.rs  icons.rs  mod.rs  os_detect.rs
tests/: integration_test.rs  pty_helper.py
