[package]
name = "cs"
edition = "2021"
description = "CLI snippet manager"

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
toml = "1"
dirs = "6"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
rustyline = "18"
console = "0.16"

[dev-dependencies]
serde_json = "1"
